# doodle

./: '  .gitignore  LICENSE.txt  NOTICE.txt  README.md
.github/workflows/: ci-cmake.yml  ci-java.yml  ci-maven.yml
buildtools/doodle-cmake/: CMakeLists.txt  doodle-algorithm  doodle-framework  doodle-giftpack  doodle-login  doodle-mail  doodle-mmorpg  doodle-payment  doodle-pipeline  doodle-rpc
buildtools/doodle-docker/: docker-compose.yml  mongodb-init.js
buildtools/doodle-java/: doodle-boot  doodle-chess  doodle-chess-boot  doodle-gift  doodle-idle  doodle-mail  doodle-payment  doodle-slg  doodle-users  pom.xml
buildtools/doodle-java/doodle-build/: pom.xml
buildtools/doodle-maven/: doodle-algorithm  doodle-boot  doodle-config  doodle-excel  doodle-framework  doodle-giftpack  doodle-login  doodle-mail  doodle-payment  doodle-pipeline  doodle-rpc  doodle-rpg  doodle-sdk  pom.xml
buildtools/doodle-maven/doodle-build/: pom.xml
components/doodle-config/doodle-config-java/: pom.xml
components/doodle-excel/doodle-excel-java/: pom.xml
components/doodle-giftpack/doodle-giftpack-cpp/: CMakeLists.txt
components/doodle-giftpack/doodle-giftpack-java/: pom.xml
components/doodle-login/doodle-login-java/: pom.xml
doodle-java/: .gitignore  README.md  pom.xml
doodle-java/doodle-build/: pom.xml
doodle-java/doodle-dependencies/: pom.xml
doodle-java/doodle-giftpack/: pom.xml
doodle-java/doodle-login/: pom.xml
doodle-java/doodle-mail/: pom.xml
doodle-java/doodle-parent/: pom.xml
doodle-java/doodle-payment/: pom.xml
(+356 files in other folders)
