cmake_minimum_required(VERSION 3.14)
project(doodle)

add_subdirectory(doodle-algorithm)
add_subdirectory(doodle-framework)
add_subdirectory(doodle-giftpack)
add_subdirectory(doodle-login)
add_subdirectory(doodle-mail)
add_subdirectory(doodle-mmorpg)
add_subdirectory(doodle-payment)
add_subdirectory(doodle-pipeline)
add_subdirectory(doodle-rpc)
